--- a/index.html
+++ b/index.html
@@ -38,18 +38,19 @@
 </head>
 <body ng-app="app">
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">Nackbutik</a>
+            <a class="navbar-brand glyphicon glyphicon-home" href="/"></a>
         </div>
         <ul class="nav navbar-nav">
-            <li><a href="/products">Products</a></li>
+            <li><a href="/">Products</a></li>
             <li><a href="{{isLoggedIn ? '/cart' : '/login'}}">{{isLoggedIn ? 'Cart' : 'Log in'}}</a>
-            <li><a ng-click="logOut()" ng-if="isLoggedIn == true">Logout</a></li>
+            <li ng-controller="loginController" ng-show="isLoggedIn"><a ng-click="logOut()" href="/" >Logout</a></li>
         </ul>
     </div>
 </nav>
+<br><br><br><br>
 
 <div ng-view></div>
 
