--- a/app/login/login-create.template.html
+++ b/app/login/login-create.template.html
@@ -1,27 +1,82 @@
+<!--
 <div class="col-md-5"></div>
 <div class="col-md-6">
 
     <h1>Welcome!</h1>
     <h2>Create an account</h2>
 
-    <label>First name: {{customer.firstName}}</label><br>
+    <label>First name:</label><br>
     <input type="text" placeholder="First name..." ng-model="customer.firstName"><br><br>
-    <label>Last name: {{customer.lastName}}</label><br>
+    <label>Last name:</label><br>
     <input type="text" placeholder="Last name..." ng-model="customer.lastName"><br><br>
-    <label>Email: {{customer.email}}</label><br>
+    <label>Email:</label><br>
     <input type="email" placeholder="Email..." ng-model="customer.email"><br><br>
-    <label>Password: {{customer.password}}</label><br>
+    <label>Password:</label><br>
     <input type="password" placeholder="Password..." ng-model="customer.password"><br><br>
-    <label>Phone: {{customer.phone}} </label><br>
+    <label>Phone:</label><br>
     <input type="text" placeholder="Phone..." ng-model="customer.phone"><br><br>
-    <label>Address: {{customer.address}}</label><br>
+    <label>Address:</label><br>
     <input type="text" placeholder="Address..." ng-model="customer.address"><br><br>
-    <label>Postalcode: {{customer.postalCode}}</label><br>
+    <label>Postalcode:</label><br>
     <input type="text" placeholder="Postalcode..." ng-model="customer.postalCode"><br><br>
-    <label>City: {{customer.city}}</label><br>
+    <label>City:</label><br>
     <input type="text" placeholder="City..." ng-model="customer.city"><br><br>
 
     <a class="btn btn-info" role="button" ng-click="createCustomer()">Save</a>
 
 </div>
-<div class="col-md-1"></div>
+<div class="col-md-1"></div>-->
+
+<div class="col-md-6 col-md-offset-3">
+<form name="form" role="form">
+    <div class="form-group" ng-class="{ 'has-error': form.firstName.$touched && form.firstName.$invalid}">
+        <label for="firstName">First name: </label><br>
+        <input type="text" name="firstName" id="firstName" class="form-control" placeholder="First name..." ng-model="customer.firstName" required>
+        <span ng-show="form.firstName.$touched && form.firstName.$invalid" class="help-block">Invalid first name.</span>
+    </div>
+
+    <div class="form-group" ng-class="{ 'has-error': form.surName.$touched && form.surName.$invalid }">
+        <label for="surName">Surname: </label><br>
+        <input type="text" name="surName" id="surName" class="form-control" placeholder="Surname..." ng-model="customer.surName" required>
+        <span ng-show="form.surName.$touched && form.surName.$invalid" class="help-block">Invalid surname.</span>
+    </div>
+
+    <div class="form-group" ng-class="{ 'has-error': form.email.$touched && form.email.$invalid }">
+        <label for="email">Email: </label><br>
+        <input type="email" name="email" id="email" class="form-control" placeholder="Email..." ng-model="customer.email" required>
+        <span ng-show="form.email.$touched && form.email.$invalid" class="help-block">Invalid email.</span>
+    </div>
+
+    <div class="form-group" ng-class="{ 'has-error': form.password.$touched && form.password.$invalid }">
+        <label for="password">Password: </label><br>
+        <input type="password" name="password" id="password" class="form-control" placeholder="Password..." ng-model="customer.password" required>
+        <span ng-show="form.password.$touched && form.password.$invalid" class="help-block">Invalid password.</span>
+    </div>
+
+    <div class="form-group" ng-class="{ 'has-error': form.phone.$touched && form.phone.$invalid }">
+        <label for="phone">Phone: </label><br>
+        <input type="number" name="phone" id="phone" class="form-control" placeholder="Phone..." ng-model="customer.phone" required>
+        <span ng-show="form.phone.$touched && form.phone.$invalid" class="help-block">Invalid phone number.</span>
+    </div>
+
+    <div class="form-group" ng-class="{ 'has-error': form.address.$touched && form.address.$invalid }">
+        <label for="address">Adress: </label><br>
+        <input type="text" name="address" id="address" class="form-control" placeholder="Address..." ng-model="customer.address" required>
+        <span ng-show="form.address.$touched && form.address.$invalid" class="help-block">Invalid address.</span>
+    </div>
+
+    <div class="form-group" ng-class="{ 'has-error': form.postalcode.$touched && form.postalcode.$invalid }">
+        <label for="postalcode">Postalcode: </label><br>
+        <input type="number" name="postalcode" id="postalcode" class="form-control" placeholder="Postalcode..." ng-model="customer.postalCode" required>
+        <span ng-show="form.postalcode.$touched && form.postalcode.$invalid" class="help-block">Invalid zip code.</span>
+    </div>
+
+    <div class="form-group" ng-class="{ 'has-error': form.city.$touched && form.city.$invalid }">
+        <label for="city">City: </label><br>
+        <input type="text" name="city" id="city" class="form-control" placeholder="City..." ng-model="customer.city" required>
+        <span ng-show="form.city.$touched && form.city.$invalid" class="help-block">Invalid city.</span>
+    </div>
+</form>
+
+<a class="btn btn-info" ng-disabled="form.$invalid" role="button" ng-click="createCustomer()">Save</a>
+</div>
