--- a/app/login/login.template.html
+++ b/app/login/login.template.html
@@ -2,15 +2,15 @@
 <div class="col-md-6 col-md-offset-3">
     <h2>Login</h2>
     <form name="form" role="form">
-        <div class="form-group" ng-class="{ 'has-error': form.username.$dirty && form.username.$error.required }">
+        <div class="form-group" ng-class="{ 'has-error': form.username.$touched && form.username.$invalid}">
             <label for="username">E-mail</label>
-            <input type="text" name="username" id="username" class="form-control" ng-model="username" required />
-            <span ng-show="form.username.$dirty && form.username.$error.required" class="help-block">E-mail behövs</span>
+            <input type="email" name="username" id="username" class="form-control" ng-model="username" required />
+            <span ng-show="form.username.$touched && form.username.$invalid" class="help-block">E-mail needed to log in.</span>
         </div>
-        <div class="form-group" ng-class="{ 'has-error': form.password.$dirty && form.password.$error.required }">
+        <div class="form-group" ng-class="{ 'has-error': form.password.$touched && form.password.$invalid }">
             <label for="password">Lösenord</label>
             <input type="password" name="password" id="password" class="form-control" ng-model="password" required />
-            <span ng-show="form.password.$dirty && form.password.$error.required" class="help-block">Lösenord behövs</span>
+            <span ng-show="form.password.$touched && form.password.$invalid" class="help-block">Password needed to log in.</span>
         </div>
 
         <div class="form-actions">
