--- a/app/cart/cart.template.html
+++ b/app/cart/cart.template.html
@@ -6,6 +6,7 @@
             <div class="col-md-2">
                 <p>Name: {{product.name}}</p>
                 <p>Quantity: {{product.quantity}}</p>
+                <p>Price: {{product.price}}</p>
             </div>
             <div class="col-md-4">
                 <img align="left" class="cartImage" ng-src="{{product.imageUrl}}">
@@ -19,6 +20,7 @@
                 <p align="left">Total Sum: {{totalSum}}kr</p>
                 <button class="btn btn-success" ng-click="checkout()">Checkout</button>
                 <button class="btn btn-success" ng-click="emptyCart()">Empty Cart</button>
+                {{orderText}}
             </div>
         <div class="col-md-4">
 
