--- a/app/login/login.template.html
+++ b/app/login/login.template.html
@@ -4,12 +4,12 @@
     <form name="form" role="form">
         <div class="form-group" ng-class="{ 'has-error': form.username.$touched && form.username.$invalid}">
             <label for="username">E-mail</label>
-            <input type="email" name="username" id="username" class="form-control" ng-model="username" required />
+            <input ng-click="loginErrorText = ''" type="email" name="username" id="username" class="form-control" ng-model="username" required />
             <span ng-show="form.username.$touched && form.username.$invalid" class="help-block">E-mail needed to log in.</span>
         </div>
         <div class="form-group" ng-class="{ 'has-error': form.password.$touched && form.password.$invalid }">
             <label for="password">Lösenord</label>
-            <input type="password" name="password" id="password" class="form-control" ng-model="password" required />
+            <input ng-click="loginErrorText = ''" type="password" name="password" id="password" class="form-control" ng-model="password" required />
             <span ng-show="form.password.$touched && form.password.$invalid" class="help-block">Password needed to log in.</span>
         </div>
         <p>{{loginErrorText}}</p>
