--- a/app/login/login-create.template.html
+++ b/app/login/login-create.template.html
@@ -30,7 +30,7 @@
 <div class="col-md-6 col-md-offset-3">
 <form name="form" role="form">
     <div class="form-group" ng-class="{ 'has-error': form.firstName.$touched && form.firstName.$invalid}">
-        <label for="firstName">First name(This will be your username): </label><br>
+        <label for="firstName">First name: </label><br>
         <input ng-click="createErrorText = ''" type="text" name="firstName" id="firstName" class="form-control" placeholder="First name..." ng-model="customer.firstName" required>
         <span ng-show="form.firstName.$touched && form.firstName.$invalid" class="help-block">Invalid first name.</span>
     </div>
@@ -42,7 +42,7 @@
     </div>
 
     <div class="form-group" ng-class="{ 'has-error': form.email.$touched && form.email.$invalid }">
-        <label for="email">Email: </label><br>
+        <label for="email">Email(This will be your username): </label><br>
         <input ng-click="createErrorText = ''" type="email" name="email" id="email" class="form-control" placeholder="Email..." ng-model="customer.email" required>
         <span ng-show="form.email.$touched && form.email.$invalid" class="help-block">Invalid email.</span>
     </div>
